--- a/plugin/backup.cfg
+++ b/plugin/backup.cfg
@@ -13,7 +13,8 @@
 /etc/autoinstall
 /etc/backup.cfg
 /etc/network/interfaces
-/etc/samba/smb.conf
+/etc/samba/smb-user.conf
+/etc/samba/shares/
 /etc/enigma2/
 /home/root/.ssh/
 /home/root/.profile
