add the samba private directory to the default backup list

--- a/plugin/backup.cfg
+++ b/plugin/backup.cfg
@@ -14,6 +14,7 @@
 /etc/backup.cfg
 /etc/network/interfaces
 /etc/samba/smb-user.conf
+/etc/samba/private/
 /etc/samba/shares/
 /etc/enigma2/
 /home/root/.ssh/
