added hosts file to the backup

--- a/plugin/backup.cfg
+++ b/plugin/backup.cfg
@@ -4,6 +4,7 @@
 /etc/CCcam.channelinfo
 /etc/CCcam.providers
 /etc/exports
+/etc/hosts
 /etc/radegast.cfg
 /etc/newsreader.conf
 /etc/NETcaster.conf
