added /etc/epgimport and /etc/share/misc to the default backup list

--- a/plugin/backup.cfg
+++ b/plugin/backup.cfg
@@ -17,6 +17,8 @@
 /etc/samba/smb-user.conf
 /etc/samba/private/
 /etc/samba/shares/
+/etc/share/misc/
+/etc/epgimport/
 /etc/enigma2/
 /home/root/.ssh/
 /home/root/.profile
