added /usr/share/misc and /etc/ppanels to the default backup

--- a/plugin/backup.cfg
+++ b/plugin/backup.cfg
@@ -1,27 +1,28 @@
-/etc/dropbear/dropbear_rsa_host_key
-/etc/CCcam.cfg
-/etc/CCcam.prio
-/etc/CCcam.channelinfo
-/etc/CCcam.providers
-/etc/exports
-/etc/hosts
-/etc/radegast.cfg
-/etc/newsreader.conf
-/etc/NETcaster.conf
-/etc/resolv.conf
-/etc/wpa_supplicant.conf
-/etc/wpa_supplicant.wlan0.conf
 /etc/autoinstall
 /etc/backup.cfg
+/etc/CCcam.cfg
+/etc/CCcam.channelinfo
+/etc/CCcam.prio
+/etc/CCcam.providers
+/etc/dropbear/dropbear_rsa_host_key
+/etc/enigma2/
+/etc/epgimport/
+/etc/exports
+/etc/hosts
+/etc/init.d/rcS.local
+/etc/NETcaster.conf
 /etc/network/interfaces
-/etc/samba/smb-user.conf
+/etc/newsreader.conf
+/etc/ppanels/
+/etc/radegast.cfg
+/etc/resolv.conf
 /etc/samba/private/
 /etc/samba/shares/
-/etc/share/misc/
-/etc/epgimport/
-/etc/enigma2/
-/home/root/.ssh/
-/home/root/.profile
+/etc/samba/smb-user.conf
 /etc/tuxbox/config/
-/etc/init.d/rcS.local
+/etc/wpa_supplicant.conf
+/etc/wpa_supplicant.wlan0.conf
+/home/root/.profile
+/home/root/.ssh/
 /usr/script/
+/usr/share/misc/
